--- a/build.xml
+++ b/build.xml
@@ -38,10 +38,10 @@
     <include name="*.swc"/>
     <include name="*.apk"/>
     <include name="*.zip"/>
-    <include name="*.ear"/>
     <include name="*.egg"/>
     <include name="*.ane"/>
     <include name="*.jar"/>
+    <include name="*.ear"/>
   </patternset>
   <patternset id="compiler.resources">
     <exclude name="**/?*.java"/>
@@ -87,6 +87,41 @@
   <property name="project.jdk.home" value="${jdk.home.1.8}"/>
   <property name="project.jdk.bin" value="${jdk.bin.1.8}"/>
   <property name="project.jdk.classpath" value="jdk.classpath.1.8"/>
+  
+  
+  <!-- Global Libraries -->
+  
+  <path id="library.br.com.caelum:restfulie:1.0.1.classpath">
+    <pathelement location="${path.variable.maven_repository}/br/com/caelum/restfulie/1.0.1/restfulie-1.0.1.jar"/>
+    <pathelement location="${path.variable.maven_repository}/com/thoughtworks/xstream/xstream/1.3.1/xstream-1.3.1.jar"/>
+    <pathelement location="${path.variable.maven_repository}/commons-codec/commons-codec/1.3/commons-codec-1.3.jar"/>
+    <pathelement location="${path.variable.maven_repository}/commons-logging/commons-logging/1.1.1/commons-logging-1.1.1.jar"/>
+    <pathelement location="${path.variable.maven_repository}/javassist/javassist/3.8.0.GA/javassist-3.8.0.GA.jar"/>
+    <pathelement location="${path.variable.maven_repository}/log4j/log4j/1.2.16/log4j-1.2.16.jar"/>
+    <pathelement location="${path.variable.maven_repository}/net/java/dev/inflector/inflector/0.7.0/inflector-0.7.0.jar"/>
+    <pathelement location="${path.variable.maven_repository}/org/apache/httpcomponents/httpclient/4.0.3/httpclient-4.0.3.jar"/>
+    <pathelement location="${path.variable.maven_repository}/org/apache/httpcomponents/httpcore/4.0.1/httpcore-4.0.1.jar"/>
+    <pathelement location="${path.variable.maven_repository}/org/codehaus/jettison/jettison/1.2/jettison-1.2.jar"/>
+    <pathelement location="${path.variable.maven_repository}/org/slf4j/slf4j-api/1.6.1/slf4j-api-1.6.1.jar"/>
+    <pathelement location="${path.variable.maven_repository}/org/slf4j/slf4j-log4j12/1.6.1/slf4j-log4j12-1.6.1.jar"/>
+    <pathelement location="${path.variable.maven_repository}/stax/stax-api/1.0.1/stax-api-1.0.1.jar"/>
+    <pathelement location="${path.variable.maven_repository}/stax/stax/1.2.0/stax-1.2.0.jar"/>
+    <pathelement location="${path.variable.maven_repository}/xpp3/xpp3_min/1.1.4c/xpp3_min-1.1.4c.jar"/>
+  </path>
+  
+  <path id="library.com.google.http-client:google-http-client:1.20.0.classpath">
+    <pathelement location="${path.variable.maven_repository}/com/google/android/android/1.5_r4/android-1.5_r4.jar"/>
+    <pathelement location="${path.variable.maven_repository}/com/google/code/findbugs/jsr305/1.3.9/jsr305-1.3.9.jar"/>
+    <pathelement location="${path.variable.maven_repository}/com/google/guava/guava-jdk5/13.0/guava-jdk5-13.0.jar"/>
+    <pathelement location="${path.variable.maven_repository}/com/google/http-client/google-http-client/1.20.0/google-http-client-1.20.0.jar"/>
+    <pathelement location="${path.variable.maven_repository}/commons-codec/commons-codec/1.6/commons-codec-1.6.jar"/>
+    <pathelement location="${path.variable.maven_repository}/commons-logging/commons-logging/1.1.1/commons-logging-1.1.1.jar"/>
+    <pathelement location="${path.variable.maven_repository}/org/apache/httpcomponents/httpclient/4.0.1/httpclient-4.0.1.jar"/>
+    <pathelement location="${path.variable.maven_repository}/org/apache/httpcomponents/httpcore/4.0.1/httpcore-4.0.1.jar"/>
+    <pathelement location="${path.variable.maven_repository}/org/khronos/opengl-api/gl1.1-android-2.1_r1/opengl-api-gl1.1-android-2.1_r1.jar"/>
+    <pathelement location="${path.variable.maven_repository}/xerces/xmlParserAPIs/2.6.2/xmlParserAPIs-2.6.2.jar"/>
+    <pathelement location="${path.variable.maven_repository}/xpp3/xpp3/1.1.4c/xpp3-1.1.4c.jar"/>
+  </path>
   <!-- Register Custom Compiler Taskdefs -->
   <property name="javac2.home" value="${idea.home}/lib"/>
   <path id="javac2.classpath">
@@ -123,20 +158,28 @@
   
   <path id="learnjava.module.production.classpath">
     <path refid="${module.jdk.classpath.learnjava}"/>
+    <path refid="library.com.google.http-client:google-http-client:1.20.0.classpath"/>
+    <path refid="library.br.com.caelum:restfulie:1.0.1.classpath"/>
   </path>
   
   <path id="learnjava.runtime.production.module.classpath">
     <pathelement location="${learnjava.output.dir}"/>
+    <path refid="library.com.google.http-client:google-http-client:1.20.0.classpath"/>
+    <path refid="library.br.com.caelum:restfulie:1.0.1.classpath"/>
   </path>
   
   <path id="learnjava.module.classpath">
     <path refid="${module.jdk.classpath.learnjava}"/>
     <pathelement location="${learnjava.output.dir}"/>
+    <path refid="library.com.google.http-client:google-http-client:1.20.0.classpath"/>
+    <path refid="library.br.com.caelum:restfulie:1.0.1.classpath"/>
   </path>
   
   <path id="learnjava.runtime.module.classpath">
     <pathelement location="${learnjava.testoutput.dir}"/>
     <pathelement location="${learnjava.output.dir}"/>
+    <path refid="library.com.google.http-client:google-http-client:1.20.0.classpath"/>
+    <path refid="library.br.com.caelum:restfulie:1.0.1.classpath"/>
   </path>
   
   
@@ -190,11 +233,11 @@
   
   <target name="build.modules" depends="init, clean, compile.module.learnjava" description="build all modules"/>
 
-    <target name="build-jar">
-        <jar destfile="${learnjava.output.dir}/jar-output/learnjava.jar"
-             basedir="${learnjava.output.dir}" excludes="**/Test.class">
-        </jar>
-    </target>
+  <target name="build-jar">
+    <jar destfile="${learnjava.output.dir}/jar-build/learnjava.jar"
+         basedir="${learnjava.output.dir}" excludes="**/Test.class">
+    </jar>
+  </target>
   
   <target name="all" depends="build.modules, build-jar" description="build all"/>
 </project>
